adding API routes to authentication and authentication check for some functions
